--- a/index.html
+++ b/index.html
@@ -52,13 +52,17 @@
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
                     <a href="https://drive.google.com/file/d/1Oxy5RTnJDyKxw6d8DnKXEIWtwYu3_td0/view?usp=drive_link" class="btn-gradient text-white px-8 py-4 rounded-2xl text-lg font-bold shadow-xl shadow-teal-300/40 inline-flex items-center justify-center">
-                        Download Now — Free Forever*
+                        Download for Windows — Free Forever*
                     </a>
                     <a href="https://docs.google.com/document/d/17k7QdcIMkomdjevXtd1dVqiTGvvC4lRmyc2KhIaDnW4/edit?usp=sharing" target="_blank" class="bg-white text-gray-700 border border-gray-200 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-gray-50 flex items-center justify-center">
                         Quick Start Guide
                     </a>
                 </div>
-                <p class="mt-4 text-sm text-gray-500 italic">*Trial Mode: Full features for your 1st company file, forever.</p>
+                <p class="mt-6 text-sm text-gray-500 font-medium">
+                    💻 Currently available for <span class="text-teal-600">Windows</span>. <br class="sm:hidden">
+                    <span class="opacity-70">Coming soon for macOS, Linux, and Android.</span>
+                </p>
+                <p class="mt-2 text-xs text-gray-400 italic">*Trial Mode: Full features for your 1st company file, forever.</p>
             </div>
         </div>
         <!-- Decorative Elements -->
