Refresh KWSP logo and add multi-arch support info

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     </a>
                 </div>
                 <p class="mt-6 text-sm text-gray-500 font-medium">
-                    💻 Currently available for <span class="text-teal-600">Windows</span>. <br class="sm:hidden">
-                    <span class="opacity-70">Coming soon for macOS, Linux, and Android.</span>
+                    💻 Currently available for <span class="text-teal-600">Windows</span>.<br>
+                    <span class="text-xs opacity-80">(Supporting x86, x64, and ARM64 architectures)</span><br class="sm:hidden">
+                    <span class="opacity-70 mt-2 block">Coming soon for macOS, Linux, and Android.</span>
                 </p>
                 <p class="mt-2 text-xs text-gray-400 italic">*Trial Mode: Full features for your 1st company file, forever.</p>
             </div>
