--- a/index.html
+++ b/index.html
@@ -60,10 +60,26 @@
                 </div>
                 <p class="mt-6 text-sm text-gray-500 font-medium">
                     💻 Currently available for <span class="text-teal-600">Windows</span>.<br>
-                    <span class="text-xs opacity-80">(Supporting x86, x64, and ARM64 architectures)</span><br class="sm:hidden">
-                    <span class="opacity-70 mt-2 block">Coming soon for macOS, Linux, and Android.</span>
+                    <span class="text-xs opacity-80">(Supporting x86, x64, and ARM64 architectures)</span>
                 </p>
-                <p class="mt-2 text-xs text-gray-400 italic">*Trial Mode: Full features for your 1st company file, forever.</p>
+                <div class="mt-8">
+                    <p class="text-xs text-gray-400 uppercase tracking-widest font-bold mb-4">Coming Soon On</p>
+                    <div class="flex justify-center gap-6 opacity-40 grayscale hover:opacity-80 transition-all">
+                        <div class="flex flex-col items-center gap-1">
+                            <img src="images/macos.png" alt="macOS" class="h-8 w-auto">
+                            <span class="text-[10px] font-bold">macOS</span>
+                        </div>
+                        <div class="flex flex-col items-center gap-1">
+                            <img src="images/linux.png" alt="Linux" class="h-8 w-auto">
+                            <span class="text-[10px] font-bold">Linux</span>
+                        </div>
+                        <div class="flex flex-col items-center gap-1">
+                            <img src="images/android.png" alt="Android" class="h-8 w-auto">
+                            <span class="text-[10px] font-bold">Android</span>
+                        </div>
+                    </div>
+                </div>
+                <p class="mt-6 text-xs text-gray-400 italic">*Trial Mode: Full features for your 1st company file, forever.</p>
             </div>
         </div>
         <!-- Decorative Elements -->
@@ -74,24 +90,24 @@
     <!-- Value Propositions -->
     <section id="features" class="py-24 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 text-center md:text-left">
                 <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-teal-200 transition-colors">
-                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 flex items-center justify-center text-2xl">📋</div>
+                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">📋</div>
                     <h3 class="text-xl font-bold mb-3">Statutory Zero-Error</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Auto-calculated EPF (KWSP), SOCSO, EIS, and PCB (MTD) using the latest 2026 LHDN scales.</p>
                 </div>
                 <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-blue-200 transition-colors">
-                    <div class="w-12 h-12 bg-pastel-blue rounded-2xl mb-6 flex items-center justify-center text-2xl">⚡</div>
+                    <div class="w-12 h-12 bg-pastel-blue rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">⚡</div>
                     <h3 class="text-xl font-bold mb-3">Seamless SST</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Generate Tax Invoices and real-time SST-02 reports. Built specifically for the Malaysian tax framework.</p>
                 </div>
                 <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-teal-200 transition-colors">
-                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 flex items-center justify-center text-2xl">📦</div>
+                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">📦</div>
                     <h3 class="text-xl font-bold mb-3">Inventory & BOM</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Track components and finished goods with precision. Perfect for manufacturers and retailers.</p>
                 </div>
                 <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-pink-200 transition-colors">
-                    <div class="w-12 h-12 bg-pastel-pink rounded-2xl mb-6 flex items-center justify-center text-2xl">🔒</div>
+                    <div class="w-12 h-12 bg-pastel-pink rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🔒</div>
                     <h3 class="text-xl font-bold mb-3">Data Privacy First</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Local-first architecture. Your sensitive financial data stays on your PC, not a foreign cloud server.</p>
                 </div>
@@ -106,7 +122,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">The KiraBiz Advantage</h2>
                 <p class="text-gray-600">Why hundreds of Malaysian SMEs are switching.</p>
             </div>
-            <div class="overflow-hidden rounded-3xl border border-gray-200 bg-white shadow-sm">
+            <div class="overflow-x-auto rounded-3xl border border-gray-200 bg-white shadow-sm">
                 <table class="w-full text-left">
                     <thead class="bg-gray-100 border-b border-gray-200">
                         <tr>
@@ -155,10 +171,13 @@
                         Download Now — Try it Free
                     </a>
                 </div>
-                <div class="mt-8 flex justify-center gap-12 opacity-60 grayscale hover:opacity-100 transition-all">
-                    <img src="images/lhdn.png" alt="LHDN Ready" class="h-8 w-auto">
-                    <img src="images/kwsp.png" alt="KWSP Ready" class="h-8 w-auto">
-                    <img src="images/perkeso.png" alt="PERKESO Ready" class="h-8 w-auto">
+                <div class="mt-12 flex flex-col items-center">
+                    <p class="text-sm font-bold text-gray-500 mb-6 uppercase tracking-widest">Compliant With</p>
+                    <div class="flex flex-wrap justify-center gap-12 opacity-80 transition-all">
+                        <img src="images/lhdn.png" alt="LHDN Ready" class="h-12 w-auto">
+                        <img src="images/kwsp.svg" alt="KWSP Ready" class="h-12 w-auto">
+                        <img src="images/perkeso.png" alt="PERKESO Ready" class="h-12 w-auto">
+                    </div>
                 </div>
             </div>
         </div>
