Deploy permanent reconstructed KWSP SVG and add PERKESO compliance mention

--- a/index.html
+++ b/index.html
@@ -173,11 +173,14 @@
                 </div>
                 <div class="mt-12 flex flex-col items-center">
                     <p class="text-sm font-bold text-gray-500 mb-6 uppercase tracking-widest">Compliant With</p>
-                    <div class="flex flex-wrap justify-center gap-12 opacity-80 transition-all">
-                        <img src="images/lhdn.png" alt="LHDN Ready" class="h-12 w-auto">
-                        <img src="images/kwsp.svg" alt="KWSP Ready" class="h-12 w-auto">
-                        <img src="images/perkeso.png" alt="PERKESO Ready" class="h-12 w-auto">
+                    <div class="flex flex-wrap justify-center gap-12 items-center opacity-90 transition-all">
+                        <img src="images/lhdn.png" alt="LHDN Ready" class="h-14 w-auto">
+                        <img src="images/kwsp.svg" alt="KWSP Ready" class="h-14 w-auto">
+                        <img src="images/perkeso.png" alt="PERKESO Ready" class="h-14 w-auto">
                     </div>
+                    <p class="mt-8 text-gray-500 font-medium text-center">
+                        Stay 100% compliant with <span class="text-teal-600 font-bold">LHDN</span>, <span class="text-teal-600 font-bold">KWSP</span>, and <span class="text-teal-600 font-bold">PERKESO</span>.
+                    </p>
                 </div>
             </div>
         </div>
