Update KWSP logo to use the provided .ico file

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <p class="text-sm font-bold text-gray-500 mb-6 uppercase tracking-widest">Compliant With</p>
                     <div class="flex flex-wrap justify-center gap-12 items-center opacity-90 transition-all">
                         <img src="images/lhdn.png" alt="LHDN Ready" class="h-14 w-auto">
-                        <img src="images/kwsp.svg" alt="KWSP Ready" class="h-14 w-auto">
+                        <img src="images/kwsp.ico" alt="KWSP Ready" class="h-14 w-auto">
                         <img src="images/perkeso.png" alt="PERKESO Ready" class="h-14 w-auto">
                     </div>
                     <p class="mt-8 text-gray-500 font-medium text-center">
