--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="https://drive.google.com/file/d/1Oxy5RTnJDyKxw6d8DnKXEIWtwYu3_td0/view?usp=drive_link" class="btn-gradient text-white px-8 py-4 rounded-2xl text-lg font-bold shadow-xl shadow-teal-300/40 inline-flex items-center justify-center">
                         Download for Windows — Free Forever*
                     </a>
-                    <a href="https://docs.google.com/document/d/17k7QdcIMkomdjevXtd1dVqiTGvvC4lRmyc2KhIaDnW4/edit?usp=sharing" target="_blank" class="bg-white text-gray-700 border border-gray-200 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-gray-50 flex items-center justify-center">
+                    <a href="guide.html" class="bg-white text-gray-700 border border-gray-200 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-gray-50 flex items-center justify-center">
                         Quick Start Guide
                     </a>
                 </div>
