Update compliance sentence to include SOCSO

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="bg-pastel-blue rounded-[3rem] p-12 md:p-20 text-center relative z-10">
                 <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-6">Ready to Simplify Your Business?</h2>
                 <p class="text-xl text-gray-600 mb-10 max-w-2xl mx-auto">
-                    Join the digital revolution. Reclaim your time and ensure your business stays 100% compliant with LHDN and KWSP.
+                    Join the digital revolution. Reclaim your time and ensure your business stays 100% compliant with LHDN, KWSP, and SOCSO.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
                     <a href="https://drive.google.com/file/d/1Oxy5RTnJDyKxw6d8DnKXEIWtwYu3_td0/view?usp=drive_link" class="btn-gradient text-white px-10 py-5 rounded-2xl text-xl font-bold shadow-2xl shadow-blue-300/50">
