Add To Do List and Analysis feature blocks to landing page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Value Propositions -->
     <section id="features" class="py-24 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 text-center md:text-left">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-center md:text-left">
                 <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-teal-200 transition-colors">
                     <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">📋</div>
                     <h3 class="text-xl font-bold mb-3">Statutory Zero-Error</h3>
@@ -110,6 +110,16 @@
                     <div class="w-12 h-12 bg-pastel-pink rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🔒</div>
                     <h3 class="text-xl font-bold mb-3">Data Privacy First</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Local-first architecture. Your sensitive financial data stays on your PC, not a foreign cloud server.</p>
+                </div>
+                <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-teal-200 transition-colors">
+                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🔔</div>
+                    <h3 class="text-xl font-bold mb-3">Business Health Monitor</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">Smart "To Do List" tracks overdue invoices, low stock alerts, and upcoming statutory payments automatically.</p>
+                </div>
+                <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-blue-200 transition-colors">
+                    <div class="w-12 h-12 bg-pastel-blue rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">📊</div>
+                    <h3 class="text-xl font-bold mb-3">Intelligent Analysis</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">Interactive dashboards with automated business highlights and YTD performance insights tailored for SMEs.</p>
                 </div>
             </div>
         </div>
