Add Multi-Company, Job Costing, and Auditor features to landing page

--- a/index.html
+++ b/index.html
@@ -121,6 +121,21 @@
                     <h3 class="text-xl font-bold mb-3">Intelligent Analysis</h3>
                     <p class="text-gray-600 text-sm leading-relaxed">Interactive dashboards with automated business highlights and YTD performance insights tailored for SMEs.</p>
                 </div>
+                <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-teal-200 transition-colors">
+                    <div class="w-12 h-12 bg-pastel-mint rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🏢</div>
+                    <h3 class="text-xl font-bold mb-3">Multi-Company Support</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">Manage multiple business entities seamlessly. Each company is stored in its own secure, isolated database.</p>
+                </div>
+                <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-blue-200 transition-colors">
+                    <div class="w-12 h-12 bg-pastel-blue rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🎯</div>
+                    <h3 class="text-xl font-bold mb-3">Precision Job Costing</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">Track project-specific income and expenses. Gain deep visibility into which jobs are driving your profits.</p>
+                </div>
+                <div class="p-8 rounded-3xl bg-gray-50 border border-gray-100 hover:border-pink-200 transition-colors">
+                    <div class="w-12 h-12 bg-pastel-pink rounded-2xl mb-6 mx-auto md:mx-0 flex items-center justify-center text-2xl">🔍</div>
+                    <h3 class="text-xl font-bold mb-3">Audit-Ready Reliability</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">Built-in Company Data Auditor verifies record integrity, ensuring you are always ready for tax season or inspections.</p>
+                </div>
             </div>
         </div>
     </section>
