Update download links and add YouTube demo iframes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600">
                     <a href="#features" class="hover:text-teal-600">Features</a>
                     <a href="#compliance" class="hover:text-teal-600">Compliance</a>
-                    <a href="https://drive.google.com/file/d/1nAA2rD5FgKnVo5h_V8h7aIFfmYnYgW7x/view?usp=drive_link" class="download-btn btn-gradient text-white px-5 py-2.5 rounded-full shadow-lg shadow-teal-200/50">Download Now</a>
+                    <a href="https://drive.google.com/file/d/1pz5lYiJElAKKECcViHSbT09kG5LfJHAG/view?usp=drive_link" class="download-btn btn-gradient text-white px-5 py-2.5 rounded-full shadow-lg shadow-teal-200/50">Download Now</a>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                     Automate your SST, PCB, and 2026 Statutory requirements with Malaysia's most modern desktop accounting software. Secure, local-first, and beautifully designed.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
-                    <a href="https://drive.google.com/file/d/1nAA2rD5FgKnVo5h_V8h7aIFfmYnYgW7x/view?usp=drive_link" class="download-btn btn-gradient text-white px-8 py-4 rounded-2xl text-lg font-bold shadow-xl shadow-teal-300/40 inline-flex items-center justify-center">
+                    <a href="https://drive.google.com/file/d/1pz5lYiJElAKKECcViHSbT09kG5LfJHAG/view?usp=drive_link" class="download-btn btn-gradient text-white px-8 py-4 rounded-2xl text-lg font-bold shadow-xl shadow-teal-300/40 inline-flex items-center justify-center">
                         Download for Windows — Free Forever*
                     </a>
                     <a href="guide.html" class="bg-white text-gray-700 border border-gray-200 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-gray-50 flex items-center justify-center">
@@ -153,6 +153,36 @@
         </div>
     </section>
 
+    <!-- Video Demos -->
+    <section id="demos" class="py-24 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">See KiraBiz in Action</h2>
+                <p class="text-gray-600">Quick walkthroughs of our modern accounting features.</p>
+            </div>
+            <div class="grid md:grid-cols-2 gap-12">
+                <div class="rounded-3xl overflow-hidden shadow-2xl shadow-teal-100 border border-gray-100">
+                    <div class="aspect-video">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/l2kast_XXPo" title="KiraBiz Demo 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="font-bold text-lg mb-2">Introduction & Setup</h3>
+                        <p class="text-sm text-gray-500">Getting started with your first company file.</p>
+                    </div>
+                </div>
+                <div class="rounded-3xl overflow-hidden shadow-2xl shadow-blue-100 border border-gray-100">
+                    <div class="aspect-video">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/K7eTE4cd0-Y" title="KiraBiz Demo 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="font-bold text-lg mb-2">Advanced Compliance</h3>
+                        <p class="text-sm text-gray-500">Managing SST and Statutory deductions seamlessly.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Comparison Section -->
     <section class="py-24 bg-gray-50">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -205,7 +235,7 @@
                     Join the digital revolution. Reclaim your time and ensure your business stays 100% compliant with LHDN, KWSP, and SOCSO.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
-                    <a href="https://drive.google.com/file/d/1nAA2rD5FgKnVo5h_V8h7aIFfmYnYgW7x/view?usp=drive_link" class="download-btn btn-gradient text-white px-10 py-5 rounded-2xl text-xl font-bold shadow-2xl shadow-blue-300/50">
+                    <a href="https://drive.google.com/file/d/1pz5lYiJElAKKECcViHSbT09kG5LfJHAG/view?usp=drive_link" class="download-btn btn-gradient text-white px-10 py-5 rounded-2xl text-xl font-bold shadow-2xl shadow-blue-300/50">
                         Download Now — Try it Free
                     </a>
                 </div>
