--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                         Download for Windows — Free Forever*
                     </a>
                     <a href="guide.html" class="bg-white text-gray-700 border border-gray-200 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-gray-50 flex items-center justify-center">
-                        Quick Start Guide
+                        Detailed Guide
+                    </a>
+                    <a href="Welcome_Guide.html" class="bg-teal-50 text-teal-700 border border-teal-100 px-8 py-4 rounded-2xl text-lg font-semibold hover:bg-teal-100 flex items-center justify-center">
+                        Welcome PDF Guide (Bilingual)
                     </a>
                 </div>
                 <p class="mt-6 text-sm text-gray-500 font-medium">
